--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -568,6 +568,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100%;
 }
 
+.h-\[80vh\] {
+  height: 80vh;
+}
+
 .h-screen {
   height: 100vh;
 }
@@ -594,14 +598,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-20 {
   height: 5rem;
-}
-
-.h-\[100vh\] {
-  height: 100vh;
-}
-
-.h-\[80vh\] {
-  height: 80vh;
 }
 
 .min-h-screen {
@@ -823,6 +819,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .text-white\/90 {
   color: rgb(255 255 255 / 0.9);
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .opacity-40 {
